--- a/pyproject.toml
+++ b/pyproject.toml
@@ -19,9 +19,7 @@ classifiers = [
     "Topic :: Communications :: Chat",
     "Topic :: Security :: Cryptography",
 ]
-dependencies = [
-    "numpy",
-]
+dependencies = []
 
 [project.urls]
 "Homepage" = "https://github.com/YaronKoresh/aetherium-qcom"
@@ -32,3 +30,4 @@ aetherium-qcom = "aetherium_qcom_platform:main"
 
 [tool.setuptools]
 py-modules = ["aetherium_qcom_platform"]
+
