--- a/pyproject.toml
+++ b/pyproject.toml
@@ -8,7 +8,7 @@ version = "1.0.0"
 authors = [
   { name="Yaron Koresh", email="aharonkoresh1@gmail.com" },
 ]
-description = "A secure peer-to-peer messaging application using a One-Time Pad (OTP) for end-to-end encryption. The platform features user identity management, a contact system, and a Gradio-based user interface. It supports both one-on-one secure chats and multi-cast messaging to send a single message to multiple contacts simultaneously, with each message consuming a unique portion of the pre-shared OTP key."
+description = "Aetherium Q-Com is a decentralized and secure communication platform engineered for end-to-end encrypted messaging."
 readme = "README.md"
 requires-python = ">=3.7"
 license = { text = "MIT" }
