--- a/pyproject.toml
+++ b/pyproject.toml
@@ -8,7 +8,7 @@ version = "1.0.0"
 authors = [
   { name="Yaron Koresh", email="aharonkoresh1@gmail.com" },
 ]
-description = "Aetherium Q-Com is a decentralized and secure communication platform engineered for end-to-end encrypted messaging."
+description = "Aetherium Q-Com is a decentralized, untraceable, and unblockable communication platform engineered for truly private, censorship-resistant messaging."
 readme = "README.md"
 requires-python = ">=3.10"
 license = { text = "MIT" }
