--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,5 +1,5 @@
 [build-system]
-requires = ["setuptools>=61.0"]
+requires = ["setuptools>=68.0.0", "wheel>=0.43.0"]
 build-backend = "setuptools.build_meta"
 
 [project]
@@ -20,17 +20,17 @@ classifiers = [
     "Topic :: Security :: Cryptography",
 ]
 dependencies = [
-    "kademlia",
-    "cryptography",
-    "pqcrypto",
-    "numpy",
-    "pillow",
-    "pydub",
-    "moviepy",
-    "pyside6",
-    "olefile",
-    "defusedxml",
-    "pillow-heif"
+    "kademlia~=1.5",
+    "cryptography~=44.0",
+    "pqcrypto~=0.1.2",
+    "numpy~=1.26.4",
+    "pillow~=10.5",
+    "pydub~=0.25.1",
+    "moviepy~=1.0.3",
+    "pyside6~=6.7",
+    "olefile>=0.47",
+    "defusedxml~=0.8.0",
+    "pillow-heif~=0.16.0"
 ]
 
 [project.urls]
