Set license to MIT and update pyproject
Replace the full LICENSE (GPLv3) with an MIT license (Copyright (c) 2025 Yaron Koresh). Update pyproject.toml to set license = { text = "MIT" } instead of referencing the LICENSE file and keep the MIT classifier. This clarifies project licensing and metadata.

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -11,7 +11,7 @@ authors = [
 description = "Aetherium Q-Com is a decentralized, untraceable, and unblockable communication platform engineered for truly private, censorship-resistant messaging."
 readme = "README.md"
 requires-python = ">=3.10"
-license = { file = "LICENSE" }
+license = {text = "MIT"}
 classifiers = [
     "Programming Language :: Python :: 3",
     "License :: OSI Approved :: MIT License",
